The changes addressed at the meeting were made in the following packages: dto, converters, exceptions and services